--- a/services/frontend/tsconfig.json
+++ b/services/frontend/tsconfig.json
@@ -1,13 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "typeRoots": ["../../node_modules/@types", "./node_modules/@types"],
+    "typeRoots": ["../../node_modules/@types", "./node_modules/@types", "./src/types"],
   },
   "exclude": ["../../node_modules", "node_modules"],
-  "include": [
-    "server.ts",
-    "client.ts",
-    "apps/**/*",
-    "shared/**/*",
-  ]
+  "include": ["./src/**/*"]
 }
