--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "backend": "pnpm -F @monorepo/backend dev",
     "build:backend": "pnpm -F @monorepo/backend build",
     "build:frontend": "pnpm -F @monorepo/frontend build",
+    "build:shared": "pnpm -F @monorepo/shared build",
     "migrate": "pnpm -F @monorepo/backend migrate"
   },
   "keywords": [],
