--- a/services/shared/tsconfig.json
+++ b/services/shared/tsconfig.json
@@ -1,7 +1,22 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "typeRoots": ["../../node_modules/@types", "./node_modules/@types"],
+    "composite": true,
+    "target": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "src",
   },
-  "exclude": ["../../node_modules", "node_modules"],
+  "files": ["./src/index.ts"],
+  "include": ["vite.config.ts", "src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
