--- a/services/backend/tsconfig.json
+++ b/services/backend/tsconfig.json
@@ -12,5 +12,10 @@
     "resolveJsonModule": true,
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true,
+    "esm": true
+  }
 }
