--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@types/express": "^5.0.0",
     "@types/express-serve-static-core": "^5.0.1",
+    "@types/web": "^0.0.179",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
     "eslint": "^9.13.0",
