--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -12,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@monorepo/shared": "workspace:*",
     "@fxts/core": "^1.2.0",
+    "@monorepo/shared": "workspace:*",
     "@rune-ts/server": "^1.0.23",
     "@swc/core": "^1.7.42",
     "pretendard": "^1.3.9",
-    "rune-ts": "^0.8.12"
+    "rune-ts": "^0.8.12",
+    "webpack": "^5.96.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.1"
   }
 }
