--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "uuid": "^11.0.3"
   }
 }
