--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fxts/core": "^1.2.0",
     "@monorepo/shared": "workspace:*",
+    "@portone/browser-sdk": "^0.0.10",
     "@rune-ts/server": "^1.0.23",
     "@swc/core": "^1.7.42",
     "pretendard": "^1.3.9",
