--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@fxts/core": "^1.2.0",
+    "@portone/server-sdk": "^0.6.3",
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
