--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -17,6 +17,9 @@
     "@portone/browser-sdk": "^0.0.10",
     "@rune-ts/server": "^1.0.23",
     "@swc/core": "^1.7.42",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
+    "http-proxy-middleware": "^3.0.3",
     "pretendard": "^1.3.9",
     "rune-ts": "^0.8.12",
     "webpack": "^5.96.1"
