--- a/services/shared/package.json
+++ b/services/shared/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "decimal.js": "^10.4.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
